--- a/css/nos-solutions.css
+++ b/css/nos-solutions.css
@@ -1,12 +1,11 @@
-/* Generated by less 2.5.1 */
 ul.valid-list {
   padding: 0;
 }
 ul.valid-list li {
   list-style: none;
-  font-size: 1.1em!important;
+  font-size: 1.1em !important;
   font-weight: 400;
-  margin-bottom: .4em;
+  margin-bottom: 0.4em;
 }
 ul.valid-list li:after {
   content: none;
@@ -19,7 +18,7 @@ ul.valid-list li:before {
   background-position: center;
   background-size: cover;
   display: inline-block;
-  margin-right: .5em;
+  margin-right: 0.5em;
   margin-left: 0!important;
 }
 svg.top-left {
@@ -66,7 +65,7 @@ section ul {
   list-style: none;
 }
 section ul li {
-  margin: .5em 0;
+  margin: 0.5em 0;
 }
 section ul li:before {
   content: "\2022";
@@ -80,7 +79,7 @@ section ul li:before {
   padding-bottom: 15em;
 }
 section.offer-inter {
-  background: #fff!important;
+  background: #fff !important;
 }
 section.offer-inter h2 {
   color: #bf3b2b;
@@ -107,7 +106,7 @@ section.offer-inter + .business-case h4 {
   zoom: 81%;
 }
 section.offer-intra {
-  background: #fff!important;
+  background: #fff !important;
 }
 section.offer-intra h2 {
   color: #4faeff;
@@ -122,22 +121,22 @@ section.offer-intra + .business-case h4 {
   color: #4faeff;
 }
 section.offer-transfo {
-  background: #fff!important;
+  background: #fff !important;
 }
 section.offer-transfo h2 {
-  color: #e66343;
+  color: #E66343;
 }
 section.offer-transfo ul li:before {
-  color: #e66343;
+  color: #E66343;
 }
 section.offer-transfo + .business-case {
-  background: #e66343 !important;
+  background: #E66343 !important;
 }
 section.offer-transfo + .business-case h4 {
-  color: #e66343;
+  color: #E66343;
 }
 section.offer-digital-learning {
-  background: #fff!important;
+  background: #fff !important;
 }
 section.offer-digital-learning h2 {
   color: #505a9b;
@@ -189,12 +188,12 @@ html .business-case p {
 html .business-case h4 {
   font-size: 1.5em;
   color: #505a9b;
-  margin: 1.5em 0 .5em 0;
+  margin: 1.5em 0 0.5em 0;
   text-transform: uppercase;
 }
 html .business-case .encart {
   margin: 1em 3em;
-  padding: .5em 2em;
+  padding: 0.5em 2em;
   border: solid 1px #c7c7c7;
   text-align: left;
 }
@@ -215,7 +214,7 @@ html .business-case .numerical-data img {
   display: block;
   margin: auto;
   margin-bottom: 1em;
-  opacity: .5;
+  opacity: 0.5;
   max-width: 50px;
 }
 html .business-case .row-same-height {
@@ -240,7 +239,7 @@ html body .content-show.show > .content-wrapper {
   background: #f5f5f5;
 }
 html .testimonial-wrapper .row-same-height > [class^='col-'] .wrapper {
-  background: #f5f5f5!important;
+  background: #f5f5f5 !important;
   border: none;
 }
 html .testimonial-wrapper .row:first-child {
