--- a/css/page-nos-formations.css
+++ b/css/page-nos-formations.css
@@ -1,17 +1,16 @@
-/* Generated by less 2.5.1 */
 .container {
   max-width: 1230px;
 }
 h1 {
   text-transform: uppercase;
-  color: #6b6b6b!important;
+  color: #6b6b6b !important;
   font-size: 1.7em;
   margin: 0 !important;
 }
 @media only screen and (max-width: 767px) {
   h1 {
-    margin: .5em 0 !important;
-    font-size: 1.3em!important;
+    margin: 0.5em 0 !important;
+    font-size: 1.3em !important;
   }
 }
 hr {
@@ -173,7 +172,7 @@ hr {
   border-bottom-left-radius: 0;
   height: 3.7em;
   margin-left: -0.3em;
-  margin-top: .1em;
+  margin-top: 0.1em;
 }
 #nos-formations .search-btn svg {
   margin-top: 7px;
@@ -191,7 +190,7 @@ hr {
 }
 #nos-formations h1 {
   color: #bf3b2b;
-  margin-bottom: .2em;
+  margin-bottom: 0.2em;
 }
 #nos-formations h2 {
   font-variant: small-caps;
@@ -246,21 +245,21 @@ hr {
 }
 #nos-formations form label i {
   text-transform: lowercase;
-  font-size: .9em;
+  font-size: 0.9em;
   font-weight: 400;
   color: #8b8b8b;
-  padding-left: .5em;
+  padding-left: 0.5em;
 }
 #nos-formations form input,
 #nos-formations form select,
 #nos-formations form textarea {
-  margin-top: .5em;
+  margin-top: 0.5em;
   font-size: 1em;
   height: 2.5em;
   border: solid 1px #bcbcbc;
   border-bottom: solid 2px #bcbcbc;
-  padding-right: .5em;
-  padding-left: .5em;
+  padding-right: 0.5em;
+  padding-left: 0.5em;
 }
 #nos-formations form input:focus,
 #nos-formations form select:focus,
@@ -331,12 +330,12 @@ hr {
 }
 #nos-formations #formations [class*='col-'] .wrapper .nouvelle_formation {
   padding-bottom: 0;
-  margin-top: .8em;
+  margin-top: 0.8em;
   display: inline-block;
 }
 #nos-formations #formations [class*='col-'] .wrapper .nouvelle_formation:before {
   color: #fff;
-  padding: .3em .5em;
+  padding: 0.3em 0.5em;
   text-transform: uppercase;
   font-weight: bolder;
   min-height: 1.5em;
@@ -346,12 +345,12 @@ hr {
 }
 #nos-formations #formations [class*='col-'] .wrapper .top_formation {
   padding-bottom: 0;
-  margin-top: .8em;
+  margin-top: 0.8em;
   display: inline-block;
 }
 #nos-formations #formations [class*='col-'] .wrapper .top_formation:before {
   color: #fff;
-  padding: .3em .5em;
+  padding: 0.3em 0.5em;
   text-transform: uppercase;
   font-weight: bolder;
   min-height: 1.5em;
@@ -360,19 +359,19 @@ hr {
   content: "Top formation !";
 }
 #nos-formations #formations [class*='col-'] .wrapper .goals {
-  padding: .5em 0;
+  padding: 0.5em 0;
 }
 #nos-formations #formations [class*='col-'] .wrapper .goals ul {
   padding: 0;
 }
 #nos-formations #formations [class*='col-'] .wrapper .goals li {
   list-style: none;
-  font-size: 1.1em!important;
+  font-size: 1.1em !important;
   font-weight: 400;
-  margin-bottom: .4em;
+  margin-bottom: 0.4em;
   padding-left: 19px;
   margin-top: 10px;
-  font-size: .93em!important;
+  font-size: 0.93em !important;
 }
 #nos-formations #formations [class*='col-'] .wrapper .goals li:after {
   content: none;
@@ -390,7 +389,7 @@ hr {
 }
 #nos-formations #formations [class*='col-'] .wrapper > div {
   position: relative;
-  padding: 0 .9em;
+  padding: 0 0.9em;
   padding-bottom: 3em;
 }
 #nos-formations #formations [class*='col-'] .wrapper > div a > h4 {
@@ -400,7 +399,7 @@ hr {
   color: #bf3b2b;
 }
 #nos-formations #formations [class*='col-'] .wrapper > div h4 {
-  margin-top: .6em;
+  margin-top: 0.6em;
   font-size: 1.2em;
   text-transform: uppercase;
 }
@@ -410,7 +409,7 @@ hr {
   flex-basis: auto;
   overflow: hidden;
   text-overflow: ellipsis;
-  margin-top: .5em;
+  margin-top: 0.5em;
 }
 #nos-formations #formations [class*='col-'] .wrapper > div div {
   padding-bottom: 1.3em;
@@ -423,7 +422,7 @@ hr {
 }
 #nos-formations #formations [class*='col-'] .wrapper > div span i,
 #nos-formations #formations [class*='col-'] .wrapper > div span b {
-  padding-left: .7em;
+  padding-left: 0.7em;
 }
 #nos-formations #formations [class*='col-'] .wrapper > div img {
   vertical-align: middle;
@@ -437,7 +436,7 @@ hr {
   left: 0;
   margin-left: 15px;
   margin-right: 15px;
-  margin-bottom: .1em;
+  margin-bottom: 0.1em;
   width: calc(100% - 30px) !important;
   display: block;
   text-align: center;
@@ -450,9 +449,9 @@ hr {
   margin: 2em 0;
 }
 #nos-formations #formations .session {
-  padding: .5em 0 .2em 0!important;
+  padding: 0.5em 0 0.2em 0 !important;
   display: inline-block;
-  font-size: .9em;
+  font-size: 0.9em;
 }
 #nos-formations #formations .session div,
 #nos-formations #formations .session span {
@@ -469,14 +468,14 @@ hr {
 }
 #nos-formations #formations .preinscription {
   display: block !important;
-  margin-top: .5em;
+  margin-top: 0.5em;
 }
 #nos-formations #formations .preinscription a {
   position: relative;
   margin-left: 0;
   text-align: left;
   background-color: #b2b6be;
-  padding: .1em .5em;
+  padding: 0.1em 0.5em;
   color: #fff;
   font-weight: bold;
   border-radius: 4px;
@@ -496,7 +495,7 @@ hr {
 #nos-formations #formations .preinscription a:hover:before {
   width: 100%;
   content: "S'inscrire";
-  padding: .1em .5em;
+  padding: 0.1em 0.5em;
 }
 @media (max-width: 1200px) {
   #nos-formations nav .phone-ico {
@@ -507,7 +506,7 @@ hr {
     display: none;
   }
   #nos-formations nav input {
-    padding-left: .5em;
+    padding-left: 0.5em;
   }
 }
 @media (max-width: 576px) {
@@ -515,7 +514,7 @@ hr {
     font-size: 1em;
   }
   #nos-formations nav b {
-    font-size: .8em;
+    font-size: 0.8em;
   }
 }
 input[type='checkbox'] {
@@ -550,15 +549,15 @@ input::placeholder {
 #search input {
   border: solid 1px #eee;
   height: 3em;
-  padding-left: .8em;
-  width: calc(80%);
+  padding-left: 0.8em;
+  width: calc(100% - 20%);
   max-width: 100%;
 }
 #thematiques-input {
   padding: 1em;
 }
 #thematiques-input span {
-  margin-bottom: .8em;
+  margin-bottom: 0.8em;
   display: block;
   color: #fff;
 }
@@ -567,7 +566,7 @@ input::placeholder {
   -webkit-appearance: checkbox!important;
 }
 #thematiques-input label {
-  margin: .5em !important;
+  margin: 0.5em !important;
 }
 .no-result {
   background: #bb0303;
@@ -653,12 +652,12 @@ input::placeholder {
   display: inline!important;
 }
 .level_hl {
-  padding: .3em .0em!important;
-  font-size: .7em;
+  padding: 0.3em 0em !important;
+  font-size: 0.7em;
   color: #8d8b8b;
   font-weight: bold;
   font-style: italic;
-  border-radius: .2em;
+  border-radius: 0.2em;
 }
 #search-helper {
   max-height: 3em;
@@ -677,7 +676,7 @@ input::placeholder {
 }
 #thematiques-input > .row > div {
   display: inline-block;
-  font-size: .79em;
+  font-size: 0.79em;
   width: auto;
 }
 #formations [class*='col-'] .wrapper div p {
@@ -707,7 +706,7 @@ h2 {
   }
 }
 .ng-animate {
-  animation-duration: .1s;
+  animation-duration: 0.1s;
   animation-fill-mode: both;
 }
 .ng-hide-remove {
@@ -737,7 +736,7 @@ h2 {
 .nouvelle_formation,
 .top_formation {
   padding: 0 !important;
-  font-size: .7em;
+  font-size: 0.7em;
 }
 .nouvelle_formation:before,
 .top_formation:before {
@@ -758,7 +757,7 @@ select {
   height: 2.2em;
 }
 #formations [class*='col-'] .wrapper div span {
-  padding: 0 0 .5em 0;
+  padding: 0 0 0.5em 0;
 }
 #formations [class*='col-'] .wrapper .alignCenter {
   bottom: 6em;
@@ -798,7 +797,7 @@ select {
 .course_placeholer {
   width: 100%;
   text-align: center;
-  opacity: .8;
+  opacity: 0.8;
   animation: pulse 1s infinite;
   min-height: 400px;
 }
@@ -895,7 +894,7 @@ select {
   }
   #nos-formations #search input {
     width: calc(100% - 2.7em) !important;
-    height: 3.7em!important;
+    height: 3.7em !important;
   }
   #search {
     padding: 0 15px;
@@ -923,7 +922,7 @@ select {
     margin: 0 2em;
   }
   #thematiques-input label {
-    margin: .5em 0 !important;
+    margin: 0.5em 0 !important;
   }
 }
 @media (max-width: 1500px) {
@@ -934,7 +933,7 @@ select {
 @media (min-width: 768px) {
   #nos-formations .search-btn {
     height: 3em;
-    margin-top: .75em;
+    margin-top: 0.75em;
   }
   #nos-formations .search-btn svg {
     margin: 0;
