--- a/css/taxonomy-thematiques.css
+++ b/css/taxonomy-thematiques.css
@@ -1,4 +1,3 @@
-/* Generated by less 2.5.1 */
 html body .header {
   background-size: auto;
   background-repeat: no-repeat;
@@ -12,11 +11,11 @@ html body .header img {
   margin-bottom: 1em;
 }
 html body .header:after {
-  opacity: .25;
+  opacity: 0.25;
 }
 html body .header li {
   display: inline-block;
-  margin: 0 .5em;
+  margin: 0 0.5em;
 }
 html body .header li img {
   max-width: 70px!important;
@@ -41,5 +40,5 @@ html .page-template-tpl-nos-thematiques .header:after {
   content: none;
 }
 html .page-template-tpl-nos-thematiques .header hr {
-  border-top-color: #fff!important;
+  border-top-color: #fff !important;
 }
